# esp32-s3-tamagotchi

./: .gitignore  CMakeLists.txt  README.md
components/esp_lcd_touch_ft3168/: CMakeLists.txt  esp_lcd_touch_ft3168.c
components/esp_lcd_touch_ft3168/include/: esp_lcd_touch_ft3168.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/assets/animations/: animation_fps.h  animations.c  animations.h  tamagotchi_state.c  tamagotchi_state.h
main/assets/animations/celebrate/: celebrate_00.c  celebrate_01.c  celebrate_02.c  celebrate_03.c  celebrate_04.c
main/assets/animations/dead/: dead_00.c  dead_01.c  dead_02.c  dead_03.c  dead_04.c  dead_05.c  dead_06.c
main/assets/animations/hatched/: hatched_00.c  hatched_01.c  hatched_02.c  hatched_03.c
main/assets/animations/idle/: idle_00.c  idle_01.c  idle_02.c  idle_03.c  idle_04.c
main/assets/animations/prehatch/: prehatch_00.c  prehatch_01.c  prehatch_02.c  prehatch_03.c
main/assets/animations/sick/: sick_00.c  sick_01.c
main/assets/animations/writing/: writing_00.c  writing_01.c  writing_02.c  writing_03.c  writing_04.c
main/assets/images/: log.c  settings.c  tamagotchi_bg.c  trophy.c  write.c
